fix z-index of button

--- a/style.css
+++ b/style.css
@@ -96,7 +96,8 @@ textarea {
   display: inline-block;
   position: fixed;
   bottom: 15%;
-  left: 45%
+  left: 45%;
+  z-index: 999;
 }
 
 .button:hover {
